Put the \section in the inner file.
	* doc/specs/stdlib.tex: Move the \section to...
	* doc/specs/list.tex, doc/specs/float.tex: here.

--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -1,4 +1,4 @@
-\chapter{\us standard library specifications}
+\chapter{\us Standard Library}
 \label{sec:stdlib}
 
 \section{Boolean}
@@ -14,7 +14,6 @@
 \section{Dictionary}
 \section{Event}
 
-\section{Float}
 \input{float.tex}
 
 \section{Group}
@@ -109,7 +108,6 @@ Evaluating a lazy several time only makes sense with lazy arguments
 and call messages. See example with call messages in
 \autoref{sec:std-callmsg-examples-several}.
 
-\section{List}
 \input{list.tex}
 
 \section{Lobby}
