--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -443,11 +443,11 @@ given list(\autoref{lst:list-minus}).
 [00000000] [0, 0, 3]
 \end{urbiscript}
 
-\subsubsection{$<<$}
+\subsubsection{\textless\textless}
 
 A synonym for \lstinline|push_back| (\autoref{sec:std-list-pushback}).
 
-\subsubsection{$<$}
+\subsubsection{\textless}
 
 Return whether the target is inferior to the given list. A list is
 inferior to another if at least one of its element differs from the
