--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -10,7 +10,7 @@
 \section{Channel}
 \section{Code}
 \section{Comparable}
-\label{sec:std-comparable}
+\labelObject{Comparable}
 \section{Dictionary}
 \section{Event}
 
@@ -135,7 +135,8 @@ and call messages. See example with call messages in
 \label{sec:std-object-updateslot}
 
 \section{Orderable}
-\label{sec:std-orderable}
+\labelObject{Orderable}
+
 \section{Pattern}
 \section{Primitive}
 \section{String}
