--- a/doc/specs/urbi-specs.sty
+++ b/doc/specs/urbi-specs.sty
@@ -137,3 +137,15 @@
 %% ---------- %%
 \RequirePackage{myhyperref}
 \hypersetup{colorlinks, citecolor=blue, linkcolor=blue, urlcolor=blue}
+
+%% \labelObject{ ObjectName }
+%% --------------------------
+%% Define a label for an USL class name.
+\newcommand{\labelObject}[1]
+  {\label{sec:std-#1}}
+
+%% \refObject{ ObjectName }
+%% ------------------------
+%% Point to the definition of an USL class.
+\newcommand{\refObject}[1]
+  {\hyperref[sec:std-#1]{\lstinline|#1| (\autoref*{sec:std-#1})}}
