--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -7,7 +7,7 @@ elements.
 \subsection{Prototypes}
 
 \begin{itemize}
-\item Object (\autoref{sec:std-object})
+\item \refObject{Object}
 \end{itemize}
 
 \subsection{Construction}
