--- a/doc/specs/urbi-specs.sty
+++ b/doc/specs/urbi-specs.sty
@@ -95,6 +95,7 @@
 \lstnewenvironment{urbiscript}[1][]
   {\lstset{language=[interactive]urbi,
       basicstyle=\ttfamily\footnotesize,
+      float=\floatposh,
       #1}}
   {}
 
