--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -30,8 +30,7 @@ Float.new;
 
 Return the absolute value of the target (\autoref{lst:float-abs}).
 
-\begin{urbiscript}[caption=Float.abs, label=lst:float-abs,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.abs, label=lst:float-abs]
 (-5).abs;
 [00000000] 5
 (5).abs;
@@ -42,8 +41,7 @@ Return the absolute value of the target (\autoref{lst:float-abs}).
 
 Return the arcosinus of the target.
 
-\begin{urbiscript}[caption=Float.acos, label=lst:float-acos,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.acos, label=lst:float-acos]
 1.acos;
 [00000000] 0
 \end{urbiscript}
@@ -52,8 +50,7 @@ Return the arcosinus of the target.
 
 Return the arcsinus of the target.
 
-\begin{urbiscript}[caption=Float.asin, label=lst:float-asin,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.asin, label=lst:float-asin]
 0.asin;
 [00000000] 0
 \end{urbiscript}
@@ -62,8 +59,7 @@ Return the arcsinus of the target.
 
 Return a string representing the target (\autoref{lst:float-asString}).
 
-\begin{urbiscript}[caption=Float.asString, label=lst:float-asString,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.asString, label=lst:float-asString]
 42.asString;
 [00000000] "42"
 \end{urbiscript}
@@ -72,8 +68,7 @@ Return a string representing the target (\autoref{lst:float-asString}).
 
 Return the arctangent of the target (\autoref{lst:float-atan}).
 
-\begin{urbiscript}[caption=Float.atan, label=lst:float-atan,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.atan, label=lst:float-atan]
 0.atan;
 [00000000] 0
 \end{urbiscript}
@@ -82,8 +77,7 @@ Return the arctangent of the target (\autoref{lst:float-atan}).
 
 Return the bitwise and between the target and the argument (\autoref{lst:float-bitand}).
 
-\begin{urbiscript}[caption=Float.bitand, label=lst:float-bitand,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.bitand, label=lst:float-bitand]
 3 bitand 6;
 [00000000] 2
 \end{urbiscript}
@@ -92,8 +86,7 @@ Return the bitwise and between the target and the argument (\autoref{lst:float-b
 
 Return the bitwise or between the target and the argument (\autoref{lst:float-bitor}).
 
-\begin{urbiscript}[caption=Float.bitor, label=lst:float-bitor,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.bitor, label=lst:float-bitor]
 3 bitor 6;
 [00000000] 7
 \end{urbiscript}
@@ -102,8 +95,7 @@ Return the bitwise or between the target and the argument (\autoref{lst:float-bi
 
 Return a fresh Float with the same value as the target (\autoref{lst:float-clone}).
 
-\begin{urbiscript}[caption=Float.clone, label=lst:float-clone,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.clone, label=lst:float-clone]
 var x = 0;
 [00000000] 0
 var y = x.clone;
@@ -116,8 +108,7 @@ x === y;
 
 Return the 1-complement of the target (\autoref{lst:float-compl}).
 
-\begin{urbiscript}[caption=Float.compl, label=lst:float-compl,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.compl, label=lst:float-compl]
 compl 1;
 [00000000] -2
 \end{urbiscript}
@@ -126,8 +117,7 @@ compl 1;
 
 Return the cosinus of the target (\autoref{lst:float-cos}).
 
-\begin{urbiscript}[caption=Float.cos, label=lst:float-cos,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.cos, label=lst:float-cos]
 0.cos;
 [00000000] 1
 \end{urbiscript}
@@ -136,8 +126,7 @@ Return the cosinus of the target (\autoref{lst:float-cos}).
 
 Return the exponential of the target (\autoref{lst:float-exp}).
 
-\begin{urbiscript}[caption=Float.exp, label=lst:float-exp,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.exp, label=lst:float-exp]
 1.exp;
 [00000000] 2.71828
 \end{urbiscript}
@@ -146,8 +135,7 @@ Return the exponential of the target (\autoref{lst:float-exp}).
 
 Return the infinity (\autoref{lst:float-inf}).
 
-\begin{urbiscript}[caption=Float.inf, label=lst:float-inf,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.inf, label=lst:float-inf]
 Float.inf;
 [00000000] inf
 \end{urbiscript}
@@ -156,8 +144,7 @@ Float.inf;
 
 Return the logarithm of the target (\autoref{lst:float-log}).
 
-\begin{urbiscript}[caption=Float.log, label=lst:float-log,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.log, label=lst:float-log]
 2.71828.log;
 [00000000] 0.999999
 \end{urbiscript}
@@ -166,8 +153,7 @@ Return the logarithm of the target (\autoref{lst:float-log}).
 
 Return the ``not a number'' special float value (\autoref{lst:float-nan}).
 
-\begin{urbiscript}[caption=Float.nan, label=lst:float-nan,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.nan, label=lst:float-nan]
 Float.nan;
 [00000000] nan
 \end{urbiscript}
@@ -176,8 +162,7 @@ Float.nan;
 
 Return a random number between 0 and the target(\autoref{lst:float-random}).
 
-\begin{urbiscript}[caption=Float.random, label=lst:float-random,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.random, label=lst:float-random]
 5.random;
 [00000000] 3
 5.random;
@@ -190,8 +175,7 @@ Return a random number between 0 and the target(\autoref{lst:float-random}).
 
 Return the target, rounded (\autoref{lst:float-round}).
 
-\begin{urbiscript}[caption=Float.round, label=lst:float-round,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.round, label=lst:float-round]
 1.6.round;
 [00000000] 2
 1.4.round;
@@ -202,8 +186,7 @@ Return the target, rounded (\autoref{lst:float-round}).
 
 Return the sequence of integer from 0 to target - 1 as a list (\autoref{lst:float-seq}).
 
-\begin{urbiscript}[caption=Float.seq, label=lst:float-seq,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.seq, label=lst:float-seq]
 3.seq;
 [00000000] [0, 1, 2]
 \end{urbiscript}
@@ -212,8 +195,7 @@ Return the sequence of integer from 0 to target - 1 as a list (\autoref{lst:floa
 
 Return the sinus of the target (\autoref{lst:float-sin}).
 
-\begin{urbiscript}[caption=Float.sin, label=lst:float-sin,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.sin, label=lst:float-sin]
 0.sin;
 [00000000] 0
 \end{urbiscript}
@@ -222,8 +204,7 @@ Return the sinus of the target (\autoref{lst:float-sin}).
 
 Return the square root of the target (\autoref{lst:float-sqrt}).
 
-\begin{urbiscript}[caption=Float.sqrt, label=lst:float-sqrt,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.sqrt, label=lst:float-sqrt]
 1024.sqrt;
 [00000000] 32
 \end{urbiscript}
@@ -232,8 +213,7 @@ Return the square root of the target (\autoref{lst:float-sqrt}).
 
 Return the tangent of the target (\autoref{lst:float-tan}).
 
-\begin{urbiscript}[caption=Float.tan, label=lst:float-tan,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.tan, label=lst:float-tan]
 0.tan;
 [00000000] 0
 \end{urbiscript}
@@ -242,8 +222,7 @@ Return the tangent of the target (\autoref{lst:float-tan}).
 
 Return the target truncated  (\autoref{lst:float-trunc}).
 
-\begin{urbiscript}[caption=Float.trunc, label=lst:float-trunc,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.trunc, label=lst:float-trunc]
 1.9.trunc;
 [00000000] 1
 \end{urbiscript}
@@ -252,8 +231,7 @@ Return the target truncated  (\autoref{lst:float-trunc}).
 
 Return the target (\autoref{lst:float-asFloat}).
 
-\begin{urbiscript}[caption=Float.asFloat, label=lst:float-asFloat,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.asFloat, label=lst:float-asFloat]
 51.asFloat;
 [00000000] 51
 \end{urbiscript}
@@ -262,8 +240,7 @@ Return the target (\autoref{lst:float-asFloat}).
 
 Return the square of the target (\autoref{lst:float-sqr}).
 
-\begin{urbiscript}[caption=Float.sqr, label=lst:float-sqr,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.sqr, label=lst:float-sqr]
 32.sqr;
 [00000000] 1024
 \end{urbiscript}
@@ -272,8 +249,7 @@ Return the square of the target (\autoref{lst:float-sqr}).
 
 Return 1 if the target is positive, -1 otherwise (\autoref{lst:float-sgn}).
 
-\begin{urbiscript}[caption=Float.sgn, label=lst:float-sgn,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.sgn, label=lst:float-sgn]
 (-1164).sgn;
 [00000000] -1
 (1164).sgn;
@@ -284,8 +260,7 @@ Return 1 if the target is positive, -1 otherwise (\autoref{lst:float-sgn}).
 
 Take one functional argument and call it target times (\autoref{lst:float-times}).
 
-\begin{urbiscript}[caption=Float.times, label=lst:float-times,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.times, label=lst:float-times]
 5.times(function () { echo("ping")});
 [00000000] *** ping
 [00000000] *** ping
@@ -299,8 +274,7 @@ Take one functional argument and call it target times (\autoref{lst:float-times}
 Take one functional argument and call it on every integer from 0 to
 target - 1 (\autoref{lst:float-each}).
 
-\begin{urbiscript}[caption=Float.each, label=lst:float-each,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.each, label=lst:float-each]
 5.each(function (i) { echo(i * 2)});
 [00000000] *** 0
 [00000000] *** 2
@@ -313,8 +287,7 @@ target - 1 (\autoref{lst:float-each}).
 
 Return the bitwise exclusive or between the target and the first argument.
 
-\begin{urbiscript}[caption=Float.'\^{}', label=lst:float-bitxor,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.'\^{}', label=lst:float-bitxor]
 3 ^ 6;
 [00000000] 5
 \end{urbiscript}
@@ -324,8 +297,7 @@ Return the bitwise exclusive or between the target and the first argument.
 \lstinline|a >> b| return the \lstinline|a| shifted by \lstinline|b|
 bit towards the right (\autoref{lst:float-rshift}).
 
-\begin{urbiscript}[caption=Float.'$>>$', label=lst:float-rshift,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.'$>>$', label=lst:float-rshift]
 4 >> 2;
 [00000000] 1
 \end{urbiscript}
@@ -337,8 +309,7 @@ bit towards the right (\autoref{lst:float-rshift}).
 (\lstinline|<=|, \lstinline|>|, \ldots) can thus also be applied on
 floats since Float inherits \refObject{Orderable}.
 
-\begin{urbiscript}[caption=Float.'$<$', label=lst:float-LT,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.'$<$', label=lst:float-LT]
 0 < 1;
 [00000000] true
 1 < 0;
@@ -350,8 +321,7 @@ floats since Float inherits \refObject{Orderable}.
 \lstinline|a << b| return the \lstinline|a| shifted by \lstinline|b|
 bit towards the left (\autoref{lst:float-lshift}).
 
-\begin{urbiscript}[caption=Float.'$<<$', label=lst:float-lshift,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.'$<<$', label=lst:float-lshift]
 4 << 2;
 [00000000] 16
 \end{urbiscript}
@@ -360,8 +330,7 @@ bit towards the left (\autoref{lst:float-lshift}).
 
 \lstinline|a - b| returns \lstinline|a| minus \lstinline|b| (\autoref{lst:float-minus}).
 
-\begin{urbiscript}[caption=Float.'-', label=lst:float-minus,
-  float=\floatposh]
+\begin{urbiscript}[caption=Float.'-', label=lst:float-minus]
 6 - 3;
 [00000000] 3
 \end{urbiscript}
@@ -370,7 +339,7 @@ bit towards the left (\autoref{lst:float-lshift}).
 
 \lstinline|a + b| returns \lstinline|a| plus \lstinline|b| (\autoref{lst:float-plus}).
 
-\begin{urbiscript}[caption=Float.'+', label=lst:float-plus, float=\floatposh]
+\begin{urbiscript}[caption=Float.'+', label=lst:float-plus]
 1 + 1;
 [00000000] 2
 \end{urbiscript}
@@ -380,25 +349,27 @@ bit towards the left (\autoref{lst:float-lshift}).
 \lstinline|a / b| returns the quotient of \lstinline|a| divided by
 \lstinline|b| (\autoref{lst:float-div}).
 
-\begin{urbiscript}[caption=Float.'/', label=lst:float-div, float=\floatposh]
+\begin{urbiscript}[caption=Float.'/', label=lst:float-div]
 50 / 10;
 [00000000] 5
 \end{urbiscript}
 
 \subsubsection{\%}
 
-\lstinline|a \% b| returns \lstinline|a| modulo \lstinline|b| (\autoref{lst:float-mod}).
+\lstinline|a % b|
+returns \lstinline|a| modulo \lstinline|b| (\autoref{lst:float-mod}).
 
-\begin{urbiscript}[caption=Float.'\%', label=lst:float-mod, float=\floatposh]
+\begin{urbiscript}[caption=Float.'\%', label=lst:float-mod]
 50 % 11;
 [00000000] 6
 \end{urbiscript}
 
 \subsubsection{*}
 
-\lstinline|a * b| returns \lstinline|a| times \lstinline|b| (\autoref{lst:float-STAR}).
+\lstinline|a * b| returns \lstinline|a| times \lstinline|b|
+(\autoref{lst:float-STAR}).
 
-\begin{urbiscript}[caption=Float.'*', label=lst:float-STAR, float=\floatposh]
+\begin{urbiscript}[caption=Float.'*', label=lst:float-STAR]
 2 * 3;
 [00000000] 6
 \end{urbiscript}
@@ -407,7 +378,7 @@ bit towards the left (\autoref{lst:float-lshift}).
 
 \lstinline|a ** b| returns \lstinline|a| to the \lstinline|b| power (\autoref{lst:float-STAR-STAR}).
 
-\begin{urbiscript}[caption=Float.'**', label=lst:float-STAR-STAR, float=\floatposh]
+\begin{urbiscript}[caption=Float.'**', label=lst:float-STAR-STAR]
 2 ** 10;
 [00000000] 1024
 \end{urbiscript}
@@ -416,7 +387,7 @@ bit towards the left (\autoref{lst:float-lshift}).
 
 \lstinline|a == b| returns whether \lstinline|a| equals \lstinline|b| (\autoref{lst:float-eq}).
 
-\begin{urbiscript}[caption={Float.'=='}, label=lst:float-eq, float=\floatposh]
+\begin{urbiscript}[caption={Float.'=='}, label=lst:float-eq]
 1 == 1;
 [00000000] true
 1 == 2;
