--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -17,8 +17,7 @@ List can be created with their literal syntax, as shown in
 \lstinline|new| method of \lstinline|List|, given the size and an
 initialization value (\autoref{lst:new-list}).
 
-\begin{urbiscript}[caption=List.new, label=lst:new-list,
-  float=\floatposh]
+\begin{urbiscript}[caption=List.new, label=lst:new-list]
 List.new(5, "foo");
 [00000000] ["foo", "foo", "foo", "foo", "foo"]
 \end{urbiscript}
@@ -31,7 +30,7 @@ List.new(5, "foo");
 Return whether all the members of the target verify the given
 predicate (\autoref{lst:list-all}).
 
-\begin{urbiscript}[caption=List.all, label=lst:list-all, float=\floatposh]
+\begin{urbiscript}[caption=List.all, label=lst:list-all]
 // Are all elements positive?
 [-2, 0, 2, 4].all(function (e) { e > 0 });
 [00000000] false
@@ -46,7 +45,7 @@ predicate (\autoref{lst:list-all}).
 Return whether at least one of the members of the target verify the
 given predicate (\autoref{lst:list-any}).
 
-\begin{urbiscript}[caption=List.any, label=lst:list-any, float=\floatposh]
+\begin{urbiscript}[caption=List.any, label=lst:list-any]
 // Is there any even element?
 [-3, 1, -1].all(function (e) { e % 2 == 0 });
 [00000000] false
@@ -59,7 +58,7 @@ given predicate (\autoref{lst:list-any}).
 
 Return the target (\autoref{lst:list-asList}).
 
-\begin{urbiscript}[caption=List.asList, label=lst:list-asList, float=\floatposh]
+\begin{urbiscript}[caption=List.asList, label=lst:list-asList]
 [0, 1, 2].asList;
 [00000000] [0, 1, 2]
 \end{urbiscript}
@@ -69,7 +68,7 @@ Return the target (\autoref{lst:list-asList}).
 Return the target as a string describing the list
 (\autoref{lst:list-asString}).
 
-\begin{urbiscript}[caption=List.asString, label=lst:list-asString, float=\floatposh]
+\begin{urbiscript}[caption=List.asString, label=lst:list-asString]
 [0, 1, 2].asString;
 [00000000] "[0, 1, 2]"
 \end{urbiscript}
@@ -79,7 +78,7 @@ Return the target as a string describing the list
 Return the last element of the target. An error if the target is empty
 (\autoref{lst:list-back}).
 
-\begin{urbiscript}[caption=List.back, label=lst:list-back, float=\floatposh]
+\begin{urbiscript}[caption=List.back, label=lst:list-back]
 [0, 1, 2].back;
 [00000000] 2
 [].back;
@@ -90,7 +89,7 @@ Return the last element of the target. An error if the target is empty
 
 Empty the target (\autoref{lst:list-clear}).
 
-\begin{urbiscript}[caption=List.clear, label=lst:list-clear, float=\floatposh]
+\begin{urbiscript}[caption=List.clear, label=lst:list-clear]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
 x.clear;
@@ -102,7 +101,7 @@ x.clear;
 Apply the given functional value on all members (\autoref{lst:list-each})
 sequentially.
 
-\begin{urbiscript}[caption=List.each, label=lst:list-each, float=\floatposh]
+\begin{urbiscript}[caption=List.each, label=lst:list-each]
 [0, 1, 2].each(function (v) {echo (v * v); echo (v * v)});
 [00000000] *** 0
 [00000000] *** 0
@@ -117,7 +116,7 @@ sequentially.
 Apply the given functional value on all members simultaneously
 (\autoref{lst:list-each-and}).
 
-\begin{urbiscript}[caption=List.each, label=lst:list-each-and, float=\floatposh]
+\begin{urbiscript}[caption=List.each, label=lst:list-each-and]
 [0, 1, 2].'each&'(function (v) {echo (v * v); echo (v * v)});
 [00000000] *** 0
 [00000000] *** 1
@@ -131,7 +130,7 @@ Apply the given functional value on all members simultaneously
 
 Return whether the target is empty (\autoref{lst:list-empty}).
 
-\begin{urbiscript}[caption=List.empty, label=lst:list-empty, float=\floatposh]
+\begin{urbiscript}[caption=List.empty, label=lst:list-empty]
 [].empty;
 [00000000] true
 [1].empty;
@@ -143,7 +142,7 @@ Return whether the target is empty (\autoref{lst:list-empty}).
 Return the list of all member of the target that verify the given
 predicate (\autoref{lst:list-filter}).
 
-\begin{urbiscript}[caption=List.filter, label=lst:list-filter, float=\floatposh]
+\begin{urbiscript}[caption=List.filter, label=lst:list-filter]
 // Keep only odd numbers
 [0, 1, 2, 3, 4, 5].filter(function (v) {v % 2 == 1});
 [00000000] [1, 3, 5]
@@ -154,7 +153,7 @@ predicate (\autoref{lst:list-filter}).
 FIXME: this is too damn hard to explain, yet so simple
 (\autoref{lst:list-foldl}).
 
-\begin{urbiscript}[caption=List.foldl, label=lst:list-foldl, float=\floatposh]
+\begin{urbiscript}[caption=List.foldl, label=lst:list-foldl]
 
 \end{urbiscript}
 
@@ -164,7 +163,7 @@ FIXME: this is too damn hard to explain, yet so simple
 Return the first element of the target. An error if the target is
 empty (\autoref{lst:list-front}).
 
-\begin{urbiscript}[caption=List.front, label=lst:list-front, float=\floatposh]
+\begin{urbiscript}[caption=List.front, label=lst:list-front]
 [0, 1, 2].front;
 [00000000] 0
 [].front;
@@ -176,7 +175,7 @@ empty (\autoref{lst:list-front}).
 Return whether one of the member of the target equals the argument
 (\autoref{lst:list-has}).
 
-\begin{urbiscript}[caption=List.has, label=lst:list-has, float=\floatposh]
+\begin{urbiscript}[caption=List.has, label=lst:list-has]
 [0, 1, 2].has(1);
 [00000000] true
 [0, 1, 2].has(5);
@@ -188,7 +187,7 @@ Return whether one of the member of the target equals the argument
 Return whether one of the member of the target is physically equal to
 the argument (\autoref{lst:list-hasSame}).
 
-\begin{urbiscript}[caption=List.hasSame, label=lst:list-hasSame, float=\floatposh]
+\begin{urbiscript}[caption=List.hasSame, label=lst:list-hasSame]
 var x = 1;
 [00000000:hide] 1
 
@@ -207,7 +206,7 @@ Synonym for \lstinline|front| (\autoref{sec:std-list-front}).
 Concatenate all members of the target to form a string, separating
 them with the given separator (\autoref{lst:list-join}).
 
-\begin{urbiscript}[caption=List.join, label=lst:list-join, float=\floatposh]
+\begin{urbiscript}[caption=List.join, label=lst:list-join]
 ["b", "ob", "b"].join("a");
 [00000000] "baobab"
 \end{urbiscript}
@@ -217,7 +216,7 @@ them with the given separator (\autoref{lst:list-join}).
 Apply the given functional value on every member, and return the list
 of results (\autoref{lst:list-map}).
 
-\begin{urbiscript}[caption=List.map, label=lst:list-map, float=\floatposh]
+\begin{urbiscript}[caption=List.map, label=lst:list-map]
 [0, 1, 2, 3].map(function (v) { v % 2 == 0});
 [00000000] [true, false, true, false]
 \end{urbiscript}
@@ -228,7 +227,7 @@ of results (\autoref{lst:list-map}).
 Return the nth member of the target (indexing is zero-based). An error
 if out of bounds (\autoref{lst:list-nth}).
 
-\begin{urbiscript}[caption=List.nth, label=lst:list-nth, float=\floatposh]
+\begin{urbiscript}[caption=List.nth, label=lst:list-nth]
 [0, 1, 2].nth(1);
 [00000000] 1
 [0, 1, 2].nth(3);
@@ -240,7 +239,7 @@ if out of bounds (\autoref{lst:list-nth}).
 Remove and return the last element of the target. An error if the
 target is empty (\autoref{lst:list-popback}).
 
-\begin{urbiscript}[caption=List.pop\_back, label=lst:list-popback, float=\floatposh]
+\begin{urbiscript}[caption=List.pop\_back, label=lst:list-popback]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
 x.pop_back;
@@ -256,7 +255,7 @@ x;
 Remove and return the first element from the target. An error if the
 target is empty (\autoref{lst:list-popfront}).
 
-\begin{urbiscript}[caption=List.pop\_front, label=lst:list-popfront, float=\floatposh]
+\begin{urbiscript}[caption=List.pop\_front, label=lst:list-popfront]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
 x.pop_front;
@@ -273,7 +272,7 @@ x;
 Insert the given element at the end of the target
 (\autoref{lst:list-pushback}).
 
-\begin{urbiscript}[caption=List.push\_back, label=lst:list-pushback, float=\floatposh]
+\begin{urbiscript}[caption=List.push\_back, label=lst:list-pushback]
 var x = [0, 1];
 [00000000] [0, 1]
 x.push_back(2);
@@ -287,7 +286,7 @@ x;
 Insert the given element at the beginning of the target
 (\autoref{lst:list-pushfront}).
 
-\begin{urbiscript}[caption=List.push\_front, label=lst:list-pushfront, float=\floatposh]
+\begin{urbiscript}[caption=List.push\_front, label=lst:list-pushfront]
 var x = [1, 2];
 [00000000] [1, 2]
 x.push_front(0);
@@ -301,7 +300,7 @@ x;
 Return a subrange of the string, from the first index included to the
 second index excluded. An error if out of bounds (\autoref{lst:list-range}).
 
-\begin{urbiscript}[caption=List.range, label=lst:list-range, float=\floatposh]
+\begin{urbiscript}[caption=List.range, label=lst:list-range]
 [0, 1, 2, 3].range(1, 3);
 [00000000] [1, 2]
 [].range(1, 3);
@@ -314,7 +313,7 @@ second index excluded. An error if out of bounds (\autoref{lst:list-range}).
 Remove all elements from the target that equals the argument
 (\autoref{lst:list-remove}).
 
-\begin{urbiscript}[caption=List.remove, label=lst:list-remove, float=\floatposh]
+\begin{urbiscript}[caption=List.remove, label=lst:list-remove]
 var x = [0, 1, 0, 2, 0, 3];
 [00000000] [0, 1, 0, 2, 0, 3]
 x.remove(0);
@@ -328,8 +327,7 @@ x;
 Remove all elements from the target that physically equals the
 argument (\autoref{lst:list-removeById}).
 
-\begin{urbiscript}[caption=List.removeById, label=lst:list-removeById,
-  float=\floatposh]
+\begin{urbiscript}[caption=List.removeById, label=lst:list-removeById]
 var x = 1;
 [00000000] 1
 var l = [0, 1, x, 1, 2];
@@ -345,7 +343,7 @@ l;
 Return the target with the order of elements inverted
 (\autoref{lst:list-reverse}).
 
-\begin{urbiscript}[caption=List.reverse, label=lst:list-reverse, float=\floatposh]
+\begin{urbiscript}[caption=List.reverse, label=lst:list-reverse]
 [0, 1, 2].reverse;
 [00000000] [2, 1, 0]
 \end{urbiscript}
@@ -355,7 +353,7 @@ Return the target with the order of elements inverted
 Check whether all elements in the target and the first argument, are
 equal two by two (\autoref{lst:list-sameAs}).
 
-\begin{urbiscript}[caption={List.==}, label=lst:list-sameAs, float=\floatposh]
+\begin{urbiscript}[caption={List.==}, label=lst:list-sameAs]
 [0, 1, 2] == [0, 1, 2];
 [00000000] true
 [0, 1, 2] == [0, 0, 2];
@@ -368,7 +366,7 @@ equal two by two (\autoref{lst:list-sameAs}).
 Assign a value to the element of the target at the given index
 (\autoref{lst:list-setNth}).
 
-\begin{urbiscript}[caption=List.setNth, label=lst:list-setNth, float=\floatposh]
+\begin{urbiscript}[caption=List.setNth, label=lst:list-setNth]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
 x.setNth(1, 42);
@@ -381,7 +379,7 @@ x;
 
 Return the number of elements in the target (\autoref{lst:list-size}).
 
-\begin{urbiscript}[caption=List.size, label=lst:list-size, float=\floatposh]
+\begin{urbiscript}[caption=List.size, label=lst:list-size]
 [1, 2, 3].size;
 [00000000] 3
 [].size;
@@ -393,7 +391,7 @@ Return the number of elements in the target (\autoref{lst:list-size}).
 Return the target, sorted with respect to the \lstinline|<| criteria
 (\autoref{lst:list-sort}).
 
-\begin{urbiscript}[caption=List.sort, label=lst:list-sort, float=\floatposh]
+\begin{urbiscript}[caption=List.sort, label=lst:list-sort]
 [1, 0, 3, 2].sort;
 [00000000] [0, 1, 2, 3]
 \end{urbiscript}
@@ -403,7 +401,7 @@ Return the target, sorted with respect to the \lstinline|<| criteria
 Return the target, minus the first element. An error if the target is
 empty (\autoref{lst:list-tail}).
 
-\begin{urbiscript}[caption=List.tail, label=lst:list-tail, float=\floatposh]
+\begin{urbiscript}[caption=List.tail, label=lst:list-tail]
 [0, 1, 2].tail;
 [00000000] [1, 2]
 [].tail;
@@ -415,8 +413,7 @@ empty (\autoref{lst:list-tail}).
 Return the target, concatenated n times to itself, n being the
 argument (\autoref{lst:list-times}).
 
-\begin{urbiscript}[caption=List.'*', label=lst:list-times,
-  float=\floatposh]
+\begin{urbiscript}[caption=List.'*', label=lst:list-times]
 [0, 1] * 3;
 [00000000] [0, 1, 0, 1, 0, 1]
 \end{urbiscript}
