--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -258,7 +258,8 @@ Return 1 if the target is positive, -1 otherwise (\autoref{lst:float-sgn}).
 
 \subsubsection{times}
 
-Take one functional argument and call it target times (\autoref{lst:float-times}).
+Take one functional argument and call it target times
+(\autoref{lst:float-times}).
 
 \begin{urbiscript}[caption=Float.times, label=lst:float-times]
 5.times(function () { echo("ping")});
@@ -366,8 +367,8 @@ returns \lstinline|a| modulo \lstinline|b| (\autoref{lst:float-mod}).
 
 \subsubsection{*}
 
-\lstinline|a * b| returns \lstinline|a| times \lstinline|b|
-(\autoref{lst:float-STAR}).
+\lstinline|a * b| returns the product of \lstinline|a| by
+\lstinline|b| (\autoref{lst:float-STAR}).
 
 \begin{urbiscript}[caption=Float.'*', label=lst:float-STAR]
 2 * 3;
@@ -376,7 +377,8 @@ returns \lstinline|a| modulo \lstinline|b| (\autoref{lst:float-mod}).
 
 \subsubsection{**}
 
-\lstinline|a ** b| returns \lstinline|a| to the \lstinline|b| power (\autoref{lst:float-STAR-STAR}).
+\lstinline|a ** b| returns \lstinline|a| to the \lstinline|b| power
+(\autoref{lst:float-STAR-STAR}).
 
 \begin{urbiscript}[caption=Float.'**', label=lst:float-STAR-STAR]
 2 ** 10;
@@ -385,7 +387,8 @@ returns \lstinline|a| modulo \lstinline|b| (\autoref{lst:float-mod}).
 
 \subsubsection{==}
 
-\lstinline|a == b| returns whether \lstinline|a| equals \lstinline|b| (\autoref{lst:float-eq}).
+\lstinline|a == b| returns whether \lstinline|a| equals \lstinline|b|
+(\autoref{lst:float-eq}).
 
 \begin{urbiscript}[caption={Float.'=='}, label=lst:float-eq]
 1 == 1;
