--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -327,7 +327,7 @@ bit towards the left (\autoref{lst:float-lshift}).
 [00000000] 16
 \end{urbiscript}
 
-\subsubsection{-}
+\subsubsection{$-$}
 
 \lstinline|a - b| returns \lstinline|a| minus \lstinline|b| (\autoref{lst:float-minus}).
 
