--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -506,11 +506,10 @@ evaluated only if needed.
     \hline
   \end{tabular}
   \caption{Boolean operators}
-  \label{tab:logic-operators}
+  \label{tab:bool-operators}
 \end{table}
 
-\begin{urbiscript}[caption=Boolean operators,
-  label=lst:bool-operators]
+\begin{urbiscript}[caption=Boolean operators, label=lst:bool-operators]
 true && true;
 [00000000] true
 true || false;
@@ -525,7 +524,8 @@ false && (1 / 0);
 
 \subsubsection{Comparison operators}
 
-\us support classic comparison operators. See \autoref{tab:comparison-operators} and
+\us supports classical comparison operators. See
+\autoref{tab:comparison-operators} and
 \autoref{lst:comparison-operators}.
 
 \begin{table}[\floatposh]
