--- a/doc/NEWS.txt
+++ b/doc/NEWS.txt
@@ -50,3 +50,13 @@ The optional third argument indicates whether to keep empty elements:
 
   "foobar".split("o", false, false);
   [00000001] ["f", "bar"]
+
+Bug fixes
+=========
+
+Support for Windows shares
+--------------------------
+
+Previous versions of the kernel could not be launched from a Windows
+remote directory, whose name is starting with two slashes such as
+"//share/some/dir".
